chore: last round up style fixes. Changes to panel allocation in data explorer, spacing between buttons on list pages adjusted. home page button size smaller

--- a/src/pageLayout/components/TabbedPage.scss
+++ b/src/pageLayout/components/TabbedPage.scss
@@ -13,7 +13,7 @@
   justify-content: center;
 
   & > * {
-    margin-right: $cf-space-3xs;
+    margin-right: $cf-space-2xs;
 
     &:last-child {
       margin-right: 0;
